# async-gigachat

./: .gitignore  Cargo.toml  LICENSE  README.md  check-all.sh  fmt-all.sh
.github/workflows/: rust.yml
examples/: chat_completions.rs  cli_chat.rs  cli_chat_stream.rs  models.rs  tokens.rs
src/: api.rs  chat.rs  client.rs  config.rs  errors.rs  lib.rs  model.rs  result.rs  token.rs
