[package]
name = "async-gigachat"
version = "0.1.1"
edition = "2021"
authors = [
    "Aleksandr Rassamagin"
]
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["gigachat", "async", "ai"]
description = "Async bindings for Gigachat API"
rust-version = "1.65"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xsayler/async-gigachat"
repository = "https://github.com/xsayler/async-gigachat"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros"] }
tracing = "0.1.40"
secrecy = { version = "0.8.0", features=["serde"] }
uuid = { version = "1.5.0", features = ["v4"] }
features = "0.10.0"
log = "0.4.20"
derive_builder = "0.12.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.33.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tokio-test = "0.4.3"
